--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
           Soluções integradas que envolvem os mais modernos recursos de
           tecnologia.
         </div>
-        <div class="section__subtitle primary--text">
+        <div class="section__subtitle-1 primary--text">
           Sempre acompanhando as últimas evoluções.
         </div>
       </section>
@@ -75,6 +75,150 @@
       <div class="section">
         <div class="section__title secondary--text">
           sERVIÇOS DE SEGURANÇA eletrônica TESTADOS E COMPROVADOS.
+        </div>
+        <div class="security-list">
+          <div class="security-list__item">
+            <div class="security-list__item__title">Segurança Eletrônica</div>
+            <div class="security-list__item__paragraph">
+              A A.V.I. sua empresa de segurança, trás como novidade o
+              monitoramento remoto e eletrônico com pronto atendimento.
+              Possuímos os mais modernos equipamentos de CFTV e sensores que
+              acompanham todo a movimentação de forma online 24 horas. Em caso
+              de ocorrência, nossos vigilantes farão o pronto atendimento no
+              local. Tudo feito por nossa equipe de segurança direta. O
+              monitoramento remoto, trás mais segurança e qualidade com um
+              investimento mais adequado ao seu orçamento.
+            </div>
+          </div>
+          <div class="security-list__item">
+            <div class="security-list__item__title">Segurança Patrimonial</div>
+            <div class="security-list__item__paragraph">
+              Postos otimizados de trabalho, com efetivo treinamento e pronto
+              para agir a qualquer momento. Diferentes formatos de postos a sua
+              escolha: Posto Diurno ou Noturno de 12h, Posto de 44h semanais e
+              Posto de 24h. Garantia da qualidade com intensa supervisão dos
+              postos e constantes treinamentos internos. Equipe em stand by para
+              alocação emergencial, a qualquer tempo.
+            </div>
+          </div>
+          <div class="security-list__item">
+            <div class="security-list__item__title">Escolta Armada</div>
+            <div class="security-list__item__paragraph">
+              Vigilantes preparados, com experiência e capacitação no
+              gerenciamento e administração do sistema de logística de
+              transporte, executam as missões de escolta de cargas. A prestação
+              deste serviço segue elevados padrões de qualidade visando a
+              garantia da segurança do patrimônio transportado.
+            </div>
+          </div>
+          <div class="security-list__item">
+            <div class="security-list__item__title">Segurança Privada</div>
+            <div class="security-list__item__paragraph">
+              Alta customização e total atendimento das suas necessidades.
+              Definição do número de postos conforme necessidade e capacidade de
+              investimento. Equipe com perfis e treinamentos diferenciados para
+              servir em ambientes sofisticados. Segurança planejada e
+              personalizada para cada situação.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="full-width secondary">
+        <div class="section white--text">
+          <div class="section__subtitle-1 upper yellow--text">
+            Porque terceirizar?
+          </div>
+          <ul class="bullet-list">
+            <li class="bullet-list__item">
+              Cliente com mais tempo para focar nos seus negócios;
+            </li>
+            <li class="bullet-list__item">
+              Ausência de investimento em equipamentos;
+            </li>
+            <li class="bullet-list__item">
+              Cobertura de faltas, férias e licenças sem custo adicional;
+            </li>
+            <li class="bullet-list__item">
+              Isenção de processos trabalhistas e indenização por danos
+              eventuais;
+            </li>
+            <li class="bullet-list__item">
+              Diminuição do tempo de implementação permitindo maior agilidade
+              nas decisões;
+            </li>
+            <li class="bullet-list__item">
+              Substituições imediatas e sem custos adicionais;
+            </li>
+            <li class="bullet-list__item">
+              Todos os impostos trabalhistas pagos e comprovados;
+            </li>
+            <li class="bullet-list__item">
+              Treinamentos específicos para cada atividade;
+            </li>
+            <li class="bullet-list__item">Otimização do espaço fisico.</li>
+          </ul>
+          <div class="divider yellow"></div>
+          <div class="section__subtitle-1 upper yellow--text">
+            POR QUE TEMOS A MELHOR SOLUÇÃO PARA O SEU NÉGOCIO?
+          </div>
+          <div class="section__subtitle-2 yellow--text">
+            Soluções Customizadas
+          </div>
+          <ul class="bullet-list">
+            <li class="bullet-list__item">
+              Conhecimento do seu tipo de negócio.
+            </li>
+            <li class="bullet-list__item">
+              Adequação dos vigilantes ao perfil dos clientes da sua empresa.
+            </li>
+            <li class="bullet-list__item">
+              Planos de segurança exclusivos para você.
+            </li>
+          </ul>
+          <div class="section__subtitle-2 yellow--text">Total Controle</div>
+          <ul class="bullet-list">
+            <li class="bullet-list__item">
+              Ações preventivas contra ocorrências.
+            </li>
+            <li class="bullet-list__item">
+              Monitoramento constante dos postos, com acompanhamento 24 horas
+              via sede AVI.
+            </li>
+            <li class="bullet-list__item">
+              Relatórios de ocorrência para você saber tudo que acontece com a
+              segurança da sua empresa.
+            </li>
+          </ul>
+          <div class="section__subtitle-2 yellow--text">
+            Conhecimento em Segurança
+          </div>
+          <ul class="bullet-list">
+            <li class="bullet-list__item">
+              Equipe operacional experiente, intensamente treinada e pronta para
+              atuar em qualquer situação.
+            </li>
+            <li class="bullet-list__item">
+              Vigilantes capacitados em sistemas integrados de segurança
+              eletrônica.
+            </li>
+            <li class="bullet-list__item">
+              Ciclos de reciclagem embasados em ocorrências e técnicas de
+              segurança.
+            </li>
+          </ul>
+          <div class="section__subtitle-2 yellow--text">Agilidade</div>
+          <ul class="bullet-list">
+            <li class="bullet-list__item">
+              Curto tempo de resposta na alocação de vigilantes.
+            </li>
+            <li class="bullet-list__item">
+              Alta capacidade de proteção em todo tipo de ocorrência.
+            </li>
+            <li class="bullet-list__item">
+              Rapidez na supervisão, envio de relatórios e qualquer demanda da
+              sua empresa.
+            </li>
+          </ul>
         </div>
       </div>
     </div>
