--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
           custo-benefício em suas áreas de atuação.
         </div>
       </section>
-      <div class="full-width grey-tint">
+      <div class="full-width light-grey">
         <div class="section">
           <div class="section__title primary--text">
             SOMOS A EMPRESA PERFEITA DE SEGURANÇA COM SOLUÇÕES INTEGRADAS, COM
