--- a/www/index.html
+++ b/www/index.html
@@ -16,16 +16,31 @@
   </head>
   <body>
     <div class="container">
-      <div class="logo mb-4"></div>
+      <div class="logo mb-4">
+        <img src="./images/logo-grupo-avi.svg" alt="" />
+      </div>
       <section class="section">
-        <div class="foto-mock"></div>
+        <div class="foto">
+          <img src="./images/img-avi01.png" alt="" />
+        </div>
         <div class="section__title primary--text">
           Mantenha o foco no objetivo da sua empresa. a terceirização de
           serviços é essencial nas estratégias de gestão.
         </div>
+        <div class="d-flex">
+          <a
+            href="#"
+            class="btn secondary mx-auto yellow--text d-flex align-items-center"
+          >
+            <img src="./images/icon-whatsapp.svg" alt="" />
+            <span class="ml-2">Entre em contato</span>
+          </a>
+        </div>
       </section>
       <section class="section">
-        <div class="foto-mock"></div>
+        <div class="foto">
+          <img src="./images/img-avi02.png" alt="" />
+        </div>
         <div class="section__title">
           Soluções integradas que envolvem os mais modernos recursos de
           tecnologia.
@@ -33,10 +48,13 @@
         <div class="section__subtitle-1 primary--text">
           Sempre acompanhando as últimas evoluções.
         </div>
+        <img src="./images/ornamento.svg" class="w-100" alt="" />
       </section>
 
       <section class="section">
-        <div class="foto-mock"></div>
+        <div class="foto">
+          <img src="./images/img-avi03.png" alt="" />
+        </div>
         <div class="section__long-text">
           Cada cliente possui necessidades específicas e todos compartilham
           desafios e objetivos comuns: Desejam soluções seguras e inteligentes
@@ -67,12 +85,15 @@
         </div>
       </div>
       <div class="section">
+        <div class="foto"><img src="./images/img-avi04.png" alt="" /></div>
         <div class="section__title secondary--text">
           sERVIÇOS DE SEGURANÇA eletrônica TESTADOS E COMPROVADOS.
         </div>
         <div class="security-list">
           <div class="security-list__item">
-            <div class="security-list__item__title">Segurança Eletrônica</div>
+            <div class="security-list__item__title eletronica">
+              Segurança Eletrônica
+            </div>
             <div class="security-list__item__paragraph">
               A A.V.I. sua empresa de segurança, trás como novidade o
               monitoramento remoto e eletrônico com pronto atendimento.
@@ -85,7 +106,9 @@
             </div>
           </div>
           <div class="security-list__item">
-            <div class="security-list__item__title">Segurança Patrimonial</div>
+            <div class="security-list__item__title patrimonial">
+              Segurança Patrimonial
+            </div>
             <div class="security-list__item__paragraph">
               Postos otimizados de trabalho, com efetivo treinamento e pronto
               para agir a qualquer momento. Diferentes formatos de postos a sua
@@ -96,7 +119,7 @@
             </div>
           </div>
           <div class="security-list__item">
-            <div class="security-list__item__title">Escolta Armada</div>
+            <div class="security-list__item__title armada">Escolta Armada</div>
             <div class="security-list__item__paragraph">
               Vigilantes preparados, com experiência e capacitação no
               gerenciamento e administração do sistema de logística de
@@ -106,7 +129,9 @@
             </div>
           </div>
           <div class="security-list__item">
-            <div class="security-list__item__title">Segurança Privada</div>
+            <div class="security-list__item__title privada">
+              Segurança Privada
+            </div>
             <div class="security-list__item__paragraph">
               Alta customização e total atendimento das suas necessidades.
               Definição do número de postos conforme necessidade e capacidade de
@@ -213,6 +238,9 @@
               sua empresa.
             </li>
           </ul>
+          <button type="button" class="btn yellow secondary--text w-100">
+            Visite nosso site
+          </button>
         </div>
       </div>
     </div>
