--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,15 @@
         <div class="d-flex">
           <a
             href="#"
-            class="btn secondary mx-auto yellow--text d-flex align-items-center"
+            class="
+              btn
+              secondary
+              mx-auto
+              yellow--text
+              d-flex
+              align-items-center
+              hover
+            "
           >
             <img src="./images/icon-whatsapp.svg" alt="" />
             <span class="ml-2">Entre em contato</span>
@@ -238,9 +246,13 @@
               sua empresa.
             </li>
           </ul>
-          <button type="button" class="btn yellow secondary--text w-100">
+          <a
+            href="https://www.grupoavi.com.br"
+            target="_blank"
+            class="btn yellow secondary--text w-100"
+          >
             Visite nosso site
-          </button>
+          </a>
         </div>
       </div>
     </div>
